[gd_scene load_steps=14 format=4 uid="uid://tj4anjtvy1is"]

[ext_resource type="Script" path="res://scripts/game_manager.gd" id="1_kb8rw"]
[ext_resource type="Texture2D" uid="uid://c0yaj0k1eyvqg" path="res://assets/spritesheet.png" id="2_afvep"]
[ext_resource type="Script" path="res://scripts/placement_layer.gd" id="3_yh76f"]
[ext_resource type="PackedScene" uid="uid://cxgrddf7oqmy6" path="res://scenes/ui.tscn" id="4_lqoa8"]
[ext_resource type="Script" path="res://scripts/player_controller.gd" id="5_17rar"]
[ext_resource type="PackedScene" uid="uid://rjry5rga2wmm" path="res://scenes/player_camera.tscn" id="6_1ikdd"]
[ext_resource type="PackedScene" uid="uid://wu4u12hwf865" path="res://scenes/objective_manager.tscn" id="7_dytgf"]
[ext_resource type="AudioStream" uid="uid://daqimep3rko6b" path="res://assets/background_music.ogg" id="8_udcny"]
[ext_resource type="Script" path="res://scripts/sfx_manager.gd" id="9_ujoul"]
[ext_resource type="AudioStream" uid="uid://mddij2x56yt8" path="res://assets/block_place.wav" id="10_lh4gb"]

[sub_resource type="TileMapPattern" id="TileMapPattern_0h1hw"]
tile_data = PackedInt32Array(0, 393218, 5, 65536, 393218, 5, 131072, 393218, 5, 196608, 393218, 5, 1, 393218, 5, 196609, 393218, 5, 2, 393218, 5, 196610, 393218, 5, 3, 393218, 5, 65539, 393218, 5, 131075, 393218, 5, 196611, 393218, 5)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_pab8w"]
texture = ExtResource("2_afvep")
texture_region_size = Vector2i(32, 32)
0:2/0 = 0
6:5/0 = 0
6:5/0/texture_origin = Vector2i(0, 8)
1:2/0 = 0
1:2/0/texture_origin = Vector2i(0, 8)
8:5/0 = 0
8:5/0/texture_origin = Vector2i(0, 8)
9:7/0 = 0
9:7/0/texture_origin = Vector2i(0, 8)
10:7/0 = 0
10:7/0/texture_origin = Vector2i(0, 8)
9:8/0 = 0
9:8/0/texture_origin = Vector2i(0, 8)

[sub_resource type="TileSet" id="TileSet_ukeqh"]
tile_shape = 1
tile_layout = 5
tile_offset_axis = 1
tile_size = Vector2i(32, 16)
sources/2 = SubResource("TileSetAtlasSource_pab8w")
pattern_0 = SubResource("TileMapPattern_0h1hw")

[node name="main" type="Node2D"]
script = ExtResource("1_kb8rw")

[node name="PlacementLayer" type="TileMapLayer" parent="."]
z_index = 1
y_sort_enabled = true
tile_map_data = PackedByteArray("AAAAAAAAAgAIAAUAAAA=")
tile_set = SubResource("TileSet_ukeqh")
y_sort_origin = 1
script = ExtResource("3_yh76f")

[node name="UILayer" type="TileMapLayer" parent="PlacementLayer"]
z_index = 1
y_sort_enabled = true
tile_map_data = PackedByteArray("AAAAAAAAAgAIAAUAAAA=")
tile_set = SubResource("TileSet_ukeqh")
y_sort_origin = 1

[node name="Grass" type="TileMapLayer" parent="."]
y_sort_enabled = true
tile_map_data = PackedByteArray("AAAAAAAAAgAAAAIAAAAAAAEAAgAAAAIAAAABAAAAAgAAAAIAAAABAP//AgAAAAIAAAAAAP//AgAAAAIAAAD/////AgAAAAIAAAD//wAAAgAAAAIAAAD//wEAAgAAAAIAAAABAAEAAgAAAAIAAAACAP7/AgAAAAIAAAD+//7/AgAAAAIAAAD7/wAAAgAAAAIAAAD7/wEAAgAAAAIAAAD8/wAAAgAAAAIAAAD8/wEAAgAAAAIAAAD9/wAAAgAAAAIAAAD9/wEAAgAAAAIAAAD+/wAAAgAAAAIAAAD+/wEAAgAAAAIAAAACAAAAAgAAAAIAAAACAAEAAgAAAAIAAAADAAAAAgAAAAIAAAADAAEAAgAAAAIAAAAEAAEAAgAAAAIAAAAFAAEAAgAAAAIAAAD7//z/AgAAAAIAAAD7//3/AgAAAAIAAAD7//7/AgAAAAIAAAD7////AgAAAAIAAAD8//z/AgAAAAIAAAD8//3/AgAAAAIAAAD8//7/AgAAAAIAAAD8////AgAAAAIAAAD9//z/AgAAAAIAAAD9//3/AgAAAAIAAAD9//7/AgAAAAIAAAD9////AgAAAAIAAAD+//z/AgAAAAIAAAD+//3/AgAAAAIAAAD+////AgAAAAIAAAD///z/AgAAAAIAAAD///3/AgAAAAIAAAD///7/AgAAAAIAAAAAAPz/AgAAAAIAAAAAAP3/AgAAAAIAAAAAAP7/AgAAAAIAAAABAPz/AgAAAAIAAAABAP3/AgAAAAIAAAABAP7/AgAAAAIAAAACAPz/AgAAAAIAAAACAP3/AgAAAAIAAAACAP//AgAAAAIAAAADAP7/AgAAAAIAAAADAP//AgAAAAIAAAD7//v/AgAAAAIAAAD8//v/AgAAAAIAAAD9//v/AgAAAAIAAAD+//v/AgAAAAIAAAD///v/AgAAAAIAAAAAAPr/AgAAAAIAAAAAAPv/AgAAAAIAAAABAPr/AgAAAAIAAAABAPv/AgAAAAIAAAACAPr/AgAAAAIAAAACAPv/AgAAAAIAAAAGAAEAAgAAAAIAAAAHAAEAAgAAAAIAAAD+//j/AgAAAAIAAAD6//v/AgAAAAIAAAD6////AgAAAAIAAAD3//v/AgAAAAIAAAD4//v/AgAAAAIAAAD5//v/AgAAAAIAAAD2////AgAAAAIAAAD3////AgAAAAIAAAD4////AgAAAAIAAAD5////AgAAAAIAAAD2//7/AgAAAAIAAAD2/wAAAgAAAAIAAAD2/wEAAgAAAAIAAAD3/wAAAgAAAAIAAAD3/wEAAgAAAAIAAAD4/wAAAgAAAAIAAAD4/wEAAgAAAAIAAAD5/wAAAgAAAAIAAAD5/wEAAgAAAAIAAAD6/wAAAgAAAAIAAAD6/wEAAgAAAAIAAAD3//7/AgAAAAIAAAD4//7/AgAAAAIAAAD5//7/AgAAAAIAAAD6//7/AgAAAAIAAAD2//z/AgAAAAIAAAD2//3/AgAAAAIAAAD3//z/AgAAAAIAAAD3//3/AgAAAAIAAAD4//z/AgAAAAIAAAD4//3/AgAAAAIAAAD5//z/AgAAAAIAAAD5//3/AgAAAAIAAAD6//z/AgAAAAIAAAD6//3/AgAAAAIAAAD3//j/AgAAAAIAAAD4//j/AgAAAAIAAAD5//j/AgAAAAIAAAD6//j/AgAAAAIAAAD7//j/AgAAAAIAAAD8//j/AgAAAAIAAAD9//j/AgAAAAIAAAD3//n/AgAAAAIAAAD3//r/AgAAAAIAAAD4//n/AgAAAAIAAAD4//r/AgAAAAIAAAD5//n/AgAAAAIAAAD5//r/AgAAAAIAAAD6//n/AgAAAAIAAAD6//r/AgAAAAIAAAD7//n/AgAAAAIAAAD7//r/AgAAAAIAAAD8//n/AgAAAAIAAAD8//r/AgAAAAIAAAD9//n/AgAAAAIAAAD9//r/AgAAAAIAAAD+//n/AgAAAAIAAAD+//r/AgAAAAIAAAD///r/AgAAAAIAAAD3//f/AgAAAAIAAAAEAP7/AgAAAAIAAAAEAP//AgAAAAIAAAAEAAAAAgAAAAIAAAAFAP7/AgAAAAIAAAAFAP//AgAAAAIAAAAFAAAAAgAAAAIAAAAGAP7/AgAAAAIAAAAGAP//AgAAAAIAAAAGAAAAAgAAAAIAAAAHAP7/AgAAAAIAAAAHAP//AgAAAAIAAAAHAAAAAgAAAAIAAAAIAP7/AgAAAAIAAAAIAP//AgAAAAIAAAAIAAAAAgAAAAIAAAAJAP7/AgAAAAIAAAAJAP//AgAAAAIAAAAJAAAAAgAAAAIAAAAKAP7/AgAAAAIAAAAKAP//AgAAAAIAAAAKAAAAAgAAAAIAAAADAPz/AgAAAAIAAAADAP3/AgAAAAIAAAAEAPz/AgAAAAIAAAAEAP3/AgAAAAIAAAAFAPz/AgAAAAIAAAAFAP3/AgAAAAIAAAAGAPz/AgAAAAIAAAAGAP3/AgAAAAIAAAAHAPz/AgAAAAIAAAAHAP3/AgAAAAIAAAAIAPz/AgAAAAIAAAAIAP3/AgAAAAIAAAAJAPz/AgAAAAIAAAAJAP3/AgAAAAIAAAAKAPz/AgAAAAIAAAAKAP3/AgAAAAIAAAALAPz/AgAAAAIAAAALAP3/AgAAAAIAAAALAP7/AgAAAAIAAAAMAPz/AgAAAAIAAAAMAP3/AgAAAAIAAAAMAP7/AgAAAAIAAAD1/wEAAgAAAAIAAAD1/wIAAgAAAAIAAAD1/wMAAgAAAAIAAAD1/wQAAgAAAAIAAAD2/wIAAgAAAAIAAAD2/wMAAgAAAAIAAAD2/wQAAgAAAAIAAAD3/wIAAgAAAAIAAAD3/wMAAgAAAAIAAAD3/wQAAgAAAAIAAAD4/wIAAgAAAAIAAAD4/wMAAgAAAAIAAAD4/wQAAgAAAAIAAAD5/wIAAgAAAAIAAAD5/wMAAgAAAAIAAAD5/wQAAgAAAAIAAAD6/wIAAgAAAAIAAAD6/wMAAgAAAAIAAAD6/wQAAgAAAAIAAAD7/wIAAgAAAAIAAAD7/wMAAgAAAAIAAAD7/wQAAgAAAAIAAAD8/wIAAgAAAAIAAAD8/wMAAgAAAAIAAAD8/wQAAgAAAAIAAAD9/wIAAgAAAAIAAAD9/wMAAgAAAAIAAAD9/wQAAgAAAAIAAAD+/wIAAgAAAAIAAAD+/wMAAgAAAAIAAAD+/wQAAgAAAAIAAAD//wIAAgAAAAIAAAD//wMAAgAAAAIAAAD//wQAAgAAAAIAAAAAAAIAAgAAAAIAAAAAAAMAAgAAAAIAAAAAAAQAAgAAAAIAAAABAAIAAgAAAAIAAAABAAMAAgAAAAIAAAABAAQAAgAAAAIAAAACAAIAAgAAAAIAAAACAAMAAgAAAAIAAAACAAQAAgAAAAIAAAADAAIAAgAAAAIAAAADAAMAAgAAAAIAAAADAAQAAgAAAAIAAAAEAAIAAgAAAAIAAAAEAAMAAgAAAAIAAAAEAAQAAgAAAAIAAAAFAAIAAgAAAAIAAAAFAAMAAgAAAAIAAAAFAAQAAgAAAAIAAAAGAAIAAgAAAAIAAAAGAAMAAgAAAAIAAAAGAAQAAgAAAAIAAAAHAAIAAgAAAAIAAAAHAAMAAgAAAAIAAAAHAAQAAgAAAAIAAAAIAAEAAgAAAAIAAAAIAAIAAgAAAAIAAAAIAAMAAgAAAAIAAAAIAAQAAgAAAAIAAAAJAAEAAgAAAAIAAAAJAAIAAgAAAAIAAAAJAAMAAgAAAAIAAAAJAAQAAgAAAAIAAAAKAAEAAgAAAAIAAAAKAAIAAgAAAAIAAAAKAAMAAgAAAAIAAAAKAAQAAgAAAAIAAAALAAEAAgAAAAIAAAALAAIAAgAAAAIAAAALAAMAAgAAAAIAAAALAAQAAgAAAAIAAAAMAAEAAgAAAAIAAAAMAAIAAgAAAAIAAAAMAAMAAgAAAAIAAAAMAAQAAgAAAAIAAAANAAEAAgAAAAIAAAANAAIAAgAAAAIAAAANAAMAAgAAAAIAAAANAAQAAgAAAAIAAAAOAAEAAgAAAAIAAAAOAAIAAgAAAAIAAAAOAAMAAgAAAAIAAAAOAAQAAgAAAAIAAAD0//L/AgAAAAIAAAD0//P/AgAAAAIAAAD0//T/AgAAAAIAAAD0//X/AgAAAAIAAAD0//b/AgAAAAIAAAD0//f/AgAAAAIAAAD0//j/AgAAAAIAAAD0//n/AgAAAAIAAAD0//r/AgAAAAIAAAD0//v/AgAAAAIAAAD0//z/AgAAAAIAAAD0//3/AgAAAAIAAAD0//7/AgAAAAIAAAD0////AgAAAAIAAAD0/wAAAgAAAAIAAAD0/wEAAgAAAAIAAAD0/wIAAgAAAAIAAAD0/wMAAgAAAAIAAAD0/wQAAgAAAAIAAAD0/wUAAgAAAAIAAAD0/wYAAgAAAAIAAAD0/wcAAgAAAAIAAAD0/wgAAgAAAAIAAAD0/wkAAgAAAAIAAAD0/woAAgAAAAIAAAD0/wsAAgAAAAIAAAD0/wwAAgAAAAIAAAD0/w0AAgAAAAIAAAD0/w4AAgAAAAIAAAD0/w8AAgAAAAIAAAD1//L/AgAAAAIAAAD1//P/AgAAAAIAAAD1//T/AgAAAAIAAAD1//X/AgAAAAIAAAD1//b/AgAAAAIAAAD1//f/AgAAAAIAAAD1//j/AgAAAAIAAAD1//n/AgAAAAIAAAD1//r/AgAAAAIAAAD1//v/AgAAAAIAAAD1//z/AgAAAAIAAAD1//3/AgAAAAIAAAD1//7/AgAAAAIAAAD1////AgAAAAIAAAD1/wAAAgAAAAIAAAD1/wUAAgAAAAIAAAD1/wYAAgAAAAIAAAD1/wcAAgAAAAIAAAD1/wgAAgAAAAIAAAD1/wkAAgAAAAIAAAD1/woAAgAAAAIAAAD1/wsAAgAAAAIAAAD1/wwAAgAAAAIAAAD1/w0AAgAAAAIAAAD1/w4AAgAAAAIAAAD1/w8AAgAAAAIAAAD2//L/AgAAAAIAAAD2//P/AgAAAAIAAAD2//T/AgAAAAIAAAD2//X/AgAAAAIAAAD2//b/AgAAAAIAAAD2//f/AgAAAAIAAAD2//j/AgAAAAIAAAD2//n/AgAAAAIAAAD2//r/AgAAAAIAAAD2//v/AgAAAAIAAAD2/wUAAgAAAAIAAAD2/wYAAgAAAAIAAAD2/wcAAgAAAAIAAAD2/wgAAgAAAAIAAAD2/wkAAgAAAAIAAAD2/woAAgAAAAIAAAD2/wsAAgAAAAIAAAD2/wwAAgAAAAIAAAD2/w0AAgAAAAIAAAD2/w4AAgAAAAIAAAD2/w8AAgAAAAIAAAD3//L/AgAAAAIAAAD3//P/AgAAAAIAAAD3//T/AgAAAAIAAAD3//X/AgAAAAIAAAD3//b/AgAAAAIAAAD3/wUAAgAAAAIAAAD3/wYAAgAAAAIAAAD3/wcAAgAAAAIAAAD3/wgAAgAAAAIAAAD3/wkAAgAAAAIAAAD3/woAAgAAAAIAAAD3/wsAAgAAAAIAAAD3/wwAAgAAAAIAAAD3/w0AAgAAAAIAAAD3/w4AAgAAAAIAAAD3/w8AAgAAAAIAAAD4//L/AgAAAAIAAAD4//P/AgAAAAIAAAD4//T/AgAAAAIAAAD4//X/AgAAAAIAAAD4//b/AgAAAAIAAAD4//f/AgAAAAIAAAD4/wUAAgAAAAIAAAD4/wYAAgAAAAIAAAD4/wcAAgAAAAIAAAD4/wgAAgAAAAIAAAD4/wkAAgAAAAIAAAD4/woAAgAAAAIAAAD4/wsAAgAAAAIAAAD4/wwAAgAAAAIAAAD4/w0AAgAAAAIAAAD4/w4AAgAAAAIAAAD4/w8AAgAAAAIAAAD5//L/AgAAAAIAAAD5//P/AgAAAAIAAAD5//T/AgAAAAIAAAD5//X/AgAAAAIAAAD5//b/AgAAAAIAAAD5//f/AgAAAAIAAAD5/wUAAgAAAAIAAAD5/wYAAgAAAAIAAAD5/wcAAgAAAAIAAAD5/wgAAgAAAAIAAAD5/wkAAgAAAAIAAAD5/woAAgAAAAIAAAD5/wsAAgAAAAIAAAD5/wwAAgAAAAIAAAD5/w0AAgAAAAIAAAD5/w4AAgAAAAIAAAD5/w8AAgAAAAIAAAD6//L/AgAAAAIAAAD6//P/AgAAAAIAAAD6//T/AgAAAAIAAAD6//X/AgAAAAIAAAD6//b/AgAAAAIAAAD6//f/AgAAAAIAAAD6/wUAAgAAAAIAAAD6/wYAAgAAAAIAAAD6/wcAAgAAAAIAAAD6/wgAAgAAAAIAAAD6/wkAAgAAAAIAAAD6/woAAgAAAAIAAAD6/wsAAgAAAAIAAAD6/wwAAgAAAAIAAAD6/w0AAgAAAAIAAAD6/w4AAgAAAAIAAAD6/w8AAgAAAAIAAAD7//L/AgAAAAIAAAD7//P/AgAAAAIAAAD7//T/AgAAAAIAAAD7//X/AgAAAAIAAAD7//b/AgAAAAIAAAD7//f/AgAAAAIAAAD7/wUAAgAAAAIAAAD7/wYAAgAAAAIAAAD7/wcAAgAAAAIAAAD7/wgAAgAAAAIAAAD7/wkAAgAAAAIAAAD7/woAAgAAAAIAAAD7/wsAAgAAAAIAAAD7/wwAAgAAAAIAAAD7/w0AAgAAAAIAAAD7/w4AAgAAAAIAAAD7/w8AAgAAAAIAAAD8//L/AgAAAAIAAAD8//P/AgAAAAIAAAD8//T/AgAAAAIAAAD8//X/AgAAAAIAAAD8//b/AgAAAAIAAAD8//f/AgAAAAIAAAD8/wUAAgAAAAIAAAD8/wYAAgAAAAIAAAD8/wcAAgAAAAIAAAD8/wgAAgAAAAIAAAD8/wkAAgAAAAIAAAD8/woAAgAAAAIAAAD8/wsAAgAAAAIAAAD8/wwAAgAAAAIAAAD8/w0AAgAAAAIAAAD8/w4AAgAAAAIAAAD8/w8AAgAAAAIAAAD9//L/AgAAAAIAAAD9//P/AgAAAAIAAAD9//T/AgAAAAIAAAD9//X/AgAAAAIAAAD9//b/AgAAAAIAAAD9//f/AgAAAAIAAAD9/wUAAgAAAAIAAAD9/wYAAgAAAAIAAAD9/wcAAgAAAAIAAAD9/wgAAgAAAAIAAAD9/wkAAgAAAAIAAAD9/woAAgAAAAIAAAD9/wsAAgAAAAIAAAD9/wwAAgAAAAIAAAD9/w0AAgAAAAIAAAD9/w4AAgAAAAIAAAD9/w8AAgAAAAIAAAD+//L/AgAAAAIAAAD+//P/AgAAAAIAAAD+//T/AgAAAAIAAAD+//X/AgAAAAIAAAD+//b/AgAAAAIAAAD+//f/AgAAAAIAAAD+/wUAAgAAAAIAAAD+/wYAAgAAAAIAAAD+/wcAAgAAAAIAAAD+/wgAAgAAAAIAAAD+/wkAAgAAAAIAAAD+/woAAgAAAAIAAAD+/wsAAgAAAAIAAAD+/wwAAgAAAAIAAAD+/w0AAgAAAAIAAAD+/w4AAgAAAAIAAAD+/w8AAgAAAAIAAAD///L/AgAAAAIAAAD///P/AgAAAAIAAAD///T/AgAAAAIAAAD///X/AgAAAAIAAAD///b/AgAAAAIAAAD///f/AgAAAAIAAAD///j/AgAAAAIAAAD///n/AgAAAAIAAAD//wUAAgAAAAIAAAD//wYAAgAAAAIAAAD//wcAAgAAAAIAAAD//wgAAgAAAAIAAAD//wkAAgAAAAIAAAD//woAAgAAAAIAAAD//wsAAgAAAAIAAAD//wwAAgAAAAIAAAD//w0AAgAAAAIAAAD//w4AAgAAAAIAAAD//w8AAgAAAAIAAAAAAPL/AgAAAAIAAAAAAPP/AgAAAAIAAAAAAPT/AgAAAAIAAAAAAPX/AgAAAAIAAAAAAPb/AgAAAAIAAAAAAPf/AgAAAAIAAAAAAPj/AgAAAAIAAAAAAPn/AgAAAAIAAAAAAAUAAgAAAAIAAAAAAAYAAgAAAAIAAAAAAAcAAgAAAAIAAAAAAAgAAgAAAAIAAAAAAAkAAgAAAAIAAAAAAAoAAgAAAAIAAAAAAAsAAgAAAAIAAAAAAAwAAgAAAAIAAAAAAA0AAgAAAAIAAAAAAA4AAgAAAAIAAAAAAA8AAgAAAAIAAAABAPL/AgAAAAIAAAABAPP/AgAAAAIAAAABAPT/AgAAAAIAAAABAPX/AgAAAAIAAAABAPb/AgAAAAIAAAABAPf/AgAAAAIAAAABAPj/AgAAAAIAAAABAPn/AgAAAAIAAAABAAUAAgAAAAIAAAABAAYAAgAAAAIAAAABAAcAAgAAAAIAAAABAAgAAgAAAAIAAAABAAkAAgAAAAIAAAABAAoAAgAAAAIAAAABAAsAAgAAAAIAAAABAAwAAgAAAAIAAAABAA0AAgAAAAIAAAABAA4AAgAAAAIAAAABAA8AAgAAAAIAAAACAPL/AgAAAAIAAAACAPP/AgAAAAIAAAACAPT/AgAAAAIAAAACAPX/AgAAAAIAAAACAPb/AgAAAAIAAAACAPf/AgAAAAIAAAACAPj/AgAAAAIAAAACAPn/AgAAAAIAAAACAAUAAgAAAAIAAAACAAYAAgAAAAIAAAACAAcAAgAAAAIAAAACAAgAAgAAAAIAAAACAAkAAgAAAAIAAAACAAoAAgAAAAIAAAACAAsAAgAAAAIAAAACAAwAAgAAAAIAAAACAA0AAgAAAAIAAAACAA4AAgAAAAIAAAACAA8AAgAAAAIAAAADAPL/AgAAAAIAAAADAPP/AgAAAAIAAAADAPT/AgAAAAIAAAADAPX/AgAAAAIAAAADAPb/AgAAAAIAAAADAPf/AgAAAAIAAAADAPj/AgAAAAIAAAADAPn/AgAAAAIAAAADAPr/AgAAAAIAAAADAPv/AgAAAAIAAAADAAUAAgAAAAIAAAADAAYAAgAAAAIAAAADAAcAAgAAAAIAAAADAAgAAgAAAAIAAAADAAkAAgAAAAIAAAADAAoAAgAAAAIAAAADAAsAAgAAAAIAAAADAAwAAgAAAAIAAAADAA0AAgAAAAIAAAADAA4AAgAAAAIAAAADAA8AAgAAAAIAAAAEAPL/AgAAAAIAAAAEAPP/AgAAAAIAAAAEAPT/AgAAAAIAAAAEAPX/AgAAAAIAAAAEAPb/AgAAAAIAAAAEAPf/AgAAAAIAAAAEAPj/AgAAAAIAAAAEAPn/AgAAAAIAAAAEAPr/AgAAAAIAAAAEAPv/AgAAAAIAAAAEAAUAAgAAAAIAAAAEAAYAAgAAAAIAAAAEAAcAAgAAAAIAAAAEAAgAAgAAAAIAAAAEAAkAAgAAAAIAAAAEAAoAAgAAAAIAAAAEAAsAAgAAAAIAAAAEAAwAAgAAAAIAAAAEAA0AAgAAAAIAAAAEAA4AAgAAAAIAAAAEAA8AAgAAAAIAAAAFAPL/AgAAAAIAAAAFAPP/AgAAAAIAAAAFAPT/AgAAAAIAAAAFAPX/AgAAAAIAAAAFAPb/AgAAAAIAAAAFAPf/AgAAAAIAAAAFAPj/AgAAAAIAAAAFAPn/AgAAAAIAAAAFAPr/AgAAAAIAAAAFAPv/AgAAAAIAAAAFAAUAAgAAAAIAAAAFAAYAAgAAAAIAAAAFAAcAAgAAAAIAAAAFAAgAAgAAAAIAAAAFAAkAAgAAAAIAAAAFAAoAAgAAAAIAAAAFAAsAAgAAAAIAAAAFAAwAAgAAAAIAAAAFAA0AAgAAAAIAAAAFAA4AAgAAAAIAAAAFAA8AAgAAAAIAAAAGAPL/AgAAAAIAAAAGAPP/AgAAAAIAAAAGAPT/AgAAAAIAAAAGAPX/AgAAAAIAAAAGAPb/AgAAAAIAAAAGAPf/AgAAAAIAAAAGAPj/AgAAAAIAAAAGAPn/AgAAAAIAAAAGAPr/AgAAAAIAAAAGAPv/AgAAAAIAAAAGAAUAAgAAAAIAAAAGAAYAAgAAAAIAAAAGAAcAAgAAAAIAAAAGAAgAAgAAAAIAAAAGAAkAAgAAAAIAAAAGAAoAAgAAAAIAAAAGAAsAAgAAAAIAAAAGAAwAAgAAAAIAAAAGAA0AAgAAAAIAAAAGAA4AAgAAAAIAAAAGAA8AAgAAAAIAAAAHAPL/AgAAAAIAAAAHAPP/AgAAAAIAAAAHAPT/AgAAAAIAAAAHAPX/AgAAAAIAAAAHAPb/AgAAAAIAAAAHAPf/AgAAAAIAAAAHAPj/AgAAAAIAAAAHAPn/AgAAAAIAAAAHAPr/AgAAAAIAAAAHAPv/AgAAAAIAAAAHAAUAAgAAAAIAAAAHAAYAAgAAAAIAAAAHAAcAAgAAAAIAAAAHAAgAAgAAAAIAAAAHAAkAAgAAAAIAAAAHAAoAAgAAAAIAAAAHAAsAAgAAAAIAAAAHAAwAAgAAAAIAAAAHAA0AAgAAAAIAAAAHAA4AAgAAAAIAAAAHAA8AAgAAAAIAAAAIAPL/AgAAAAIAAAAIAPP/AgAAAAIAAAAIAPT/AgAAAAIAAAAIAPX/AgAAAAIAAAAIAPb/AgAAAAIAAAAIAPf/AgAAAAIAAAAIAPj/AgAAAAIAAAAIAPn/AgAAAAIAAAAIAPr/AgAAAAIAAAAIAPv/AgAAAAIAAAAIAAUAAgAAAAIAAAAIAAYAAgAAAAIAAAAIAAcAAgAAAAIAAAAIAAgAAgAAAAIAAAAIAAkAAgAAAAIAAAAIAAoAAgAAAAIAAAAIAAsAAgAAAAIAAAAIAAwAAgAAAAIAAAAIAA0AAgAAAAIAAAAIAA4AAgAAAAIAAAAIAA8AAgAAAAIAAAAJAPL/AgAAAAIAAAAJAPP/AgAAAAIAAAAJAPT/AgAAAAIAAAAJAPX/AgAAAAIAAAAJAPb/AgAAAAIAAAAJAPf/AgAAAAIAAAAJAPj/AgAAAAIAAAAJAPn/AgAAAAIAAAAJAPr/AgAAAAIAAAAJAPv/AgAAAAIAAAAJAAUAAgAAAAIAAAAJAAYAAgAAAAIAAAAJAAcAAgAAAAIAAAAJAAgAAgAAAAIAAAAJAAkAAgAAAAIAAAAJAAoAAgAAAAIAAAAJAAsAAgAAAAIAAAAJAAwAAgAAAAIAAAAJAA0AAgAAAAIAAAAJAA4AAgAAAAIAAAAJAA8AAgAAAAIAAAAKAPL/AgAAAAIAAAAKAPP/AgAAAAIAAAAKAPT/AgAAAAIAAAAKAPX/AgAAAAIAAAAKAPb/AgAAAAIAAAAKAPf/AgAAAAIAAAAKAPj/AgAAAAIAAAAKAPn/AgAAAAIAAAAKAPr/AgAAAAIAAAAKAPv/AgAAAAIAAAAKAAUAAgAAAAIAAAAKAAYAAgAAAAIAAAAKAAcAAgAAAAIAAAAKAAgAAgAAAAIAAAAKAAkAAgAAAAIAAAAKAAoAAgAAAAIAAAAKAAsAAgAAAAIAAAAKAAwAAgAAAAIAAAAKAA0AAgAAAAIAAAAKAA4AAgAAAAIAAAAKAA8AAgAAAAIAAAALAPL/AgAAAAIAAAALAPP/AgAAAAIAAAALAPT/AgAAAAIAAAALAPX/AgAAAAIAAAALAPb/AgAAAAIAAAALAPf/AgAAAAIAAAALAPj/AgAAAAIAAAALAPn/AgAAAAIAAAALAPr/AgAAAAIAAAALAPv/AgAAAAIAAAALAP//AgAAAAIAAAALAAAAAgAAAAIAAAALAAUAAgAAAAIAAAALAAYAAgAAAAIAAAALAAcAAgAAAAIAAAALAAgAAgAAAAIAAAALAAkAAgAAAAIAAAALAAoAAgAAAAIAAAALAAsAAgAAAAIAAAALAAwAAgAAAAIAAAALAA0AAgAAAAIAAAALAA4AAgAAAAIAAAALAA8AAgAAAAIAAAAMAPL/AgAAAAIAAAAMAPP/AgAAAAIAAAAMAPT/AgAAAAIAAAAMAPX/AgAAAAIAAAAMAPb/AgAAAAIAAAAMAPf/AgAAAAIAAAAMAPj/AgAAAAIAAAAMAPn/AgAAAAIAAAAMAPr/AgAAAAIAAAAMAPv/AgAAAAIAAAAMAP//AgAAAAIAAAAMAAAAAgAAAAIAAAAMAAUAAgAAAAIAAAAMAAYAAgAAAAIAAAAMAAcAAgAAAAIAAAAMAAgAAgAAAAIAAAAMAAkAAgAAAAIAAAAMAAoAAgAAAAIAAAAMAAsAAgAAAAIAAAAMAAwAAgAAAAIAAAAMAA0AAgAAAAIAAAAMAA4AAgAAAAIAAAAMAA8AAgAAAAIAAAANAPL/AgAAAAIAAAANAPP/AgAAAAIAAAANAPT/AgAAAAIAAAANAPX/AgAAAAIAAAANAPb/AgAAAAIAAAANAPf/AgAAAAIAAAANAPj/AgAAAAIAAAANAPn/AgAAAAIAAAANAPr/AgAAAAIAAAANAPv/AgAAAAIAAAANAPz/AgAAAAIAAAANAP3/AgAAAAIAAAANAP7/AgAAAAIAAAANAP//AgAAAAIAAAANAAAAAgAAAAIAAAANAAUAAgAAAAIAAAANAAYAAgAAAAIAAAANAAcAAgAAAAIAAAANAAgAAgAAAAIAAAANAAkAAgAAAAIAAAANAAoAAgAAAAIAAAANAAsAAgAAAAIAAAANAAwAAgAAAAIAAAANAA0AAgAAAAIAAAANAA4AAgAAAAIAAAANAA8AAgAAAAIAAAAOAPL/AgAAAAIAAAAOAPP/AgAAAAIAAAAOAPT/AgAAAAIAAAAOAPX/AgAAAAIAAAAOAPb/AgAAAAIAAAAOAPf/AgAAAAIAAAAOAPj/AgAAAAIAAAAOAPn/AgAAAAIAAAAOAPr/AgAAAAIAAAAOAPv/AgAAAAIAAAAOAPz/AgAAAAIAAAAOAP3/AgAAAAIAAAAOAP7/AgAAAAIAAAAOAP//AgAAAAIAAAAOAAAAAgAAAAIAAAAOAAUAAgAAAAIAAAAOAAYAAgAAAAIAAAAOAAcAAgAAAAIAAAAOAAgAAgAAAAIAAAAOAAkAAgAAAAIAAAAOAAoAAgAAAAIAAAAOAAsAAgAAAAIAAAAOAAwAAgAAAAIAAAAOAA0AAgAAAAIAAAAOAA4AAgAAAAIAAAAOAA8AAgAAAAIAAAAPAPL/AgAAAAIAAAAPAPP/AgAAAAIAAAAPAPT/AgAAAAIAAAAPAPX/AgAAAAIAAAAPAPb/AgAAAAIAAAAPAPf/AgAAAAIAAAAPAPj/AgAAAAIAAAAPAPn/AgAAAAIAAAAPAPr/AgAAAAIAAAAPAPv/AgAAAAIAAAAPAPz/AgAAAAIAAAAPAP3/AgAAAAIAAAAPAP7/AgAAAAIAAAAPAP//AgAAAAIAAAAPAAAAAgAAAAIAAAAPAAEAAgAAAAIAAAAPAAIAAgAAAAIAAAAPAAMAAgAAAAIAAAAPAAQAAgAAAAIAAAAPAAUAAgAAAAIAAAAPAAYAAgAAAAIAAAAPAAcAAgAAAAIAAAAPAAgAAgAAAAIAAAAPAAkAAgAAAAIAAAAPAAoAAgAAAAIAAAAPAAsAAgAAAAIAAAAPAAwAAgAAAAIAAAAPAA0AAgAAAAIAAAAPAA4AAgAAAAIAAAAPAA8AAgAAAAIAAAAQAPL/AgAAAAIAAAAQAPP/AgAAAAIAAAAQAPT/AgAAAAIAAAAQAPX/AgAAAAIAAAAQAPb/AgAAAAIAAAAQAPf/AgAAAAIAAAAQAPj/AgAAAAIAAAAQAPn/AgAAAAIAAAAQAPr/AgAAAAIAAAAQAPv/AgAAAAIAAAAQAPz/AgAAAAIAAAAQAP3/AgAAAAIAAAAQAP7/AgAAAAIAAAAQAP//AgAAAAIAAAAQAAAAAgAAAAIAAAAQAAEAAgAAAAIAAAAQAAIAAgAAAAIAAAAQAAMAAgAAAAIAAAAQAAQAAgAAAAIAAAAQAAUAAgAAAAIAAAAQAAYAAgAAAAIAAAAQAAcAAgAAAAIAAAAQAAgAAgAAAAIAAAAQAAkAAgAAAAIAAAAQAAoAAgAAAAIAAAAQAAsAAgAAAAIAAAAQAAwAAgAAAAIAAAAQAA0AAgAAAAIAAAAQAA4AAgAAAAIAAAAQAA8AAgAAAAIAAAARAPL/AgAAAAIAAAARAPP/AgAAAAIAAAARAPT/AgAAAAIAAAARAPX/AgAAAAIAAAARAPb/AgAAAAIAAAARAPf/AgAAAAIAAAARAPj/AgAAAAIAAAARAPn/AgAAAAIAAAARAPr/AgAAAAIAAAARAPv/AgAAAAIAAAARAPz/AgAAAAIAAAARAP3/AgAAAAIAAAARAP7/AgAAAAIAAAARAP//AgAAAAIAAAARAAAAAgAAAAIAAAARAAEAAgAAAAIAAAARAAIAAgAAAAIAAAARAAMAAgAAAAIAAAARAAQAAgAAAAIAAAARAAUAAgAAAAIAAAARAAYAAgAAAAIAAAARAAcAAgAAAAIAAAARAAgAAgAAAAIAAAARAAkAAgAAAAIAAAARAAoAAgAAAAIAAAARAAsAAgAAAAIAAAARAAwAAgAAAAIAAAARAA0AAgAAAAIAAAARAA4AAgAAAAIAAAARAA8AAgAAAAIAAAASAPL/AgAAAAIAAAASAPP/AgAAAAIAAAASAPT/AgAAAAIAAAASAPX/AgAAAAIAAAASAPb/AgAAAAIAAAASAPf/AgAAAAIAAAASAPj/AgAAAAIAAAASAPn/AgAAAAIAAAASAPr/AgAAAAIAAAASAPv/AgAAAAIAAAASAPz/AgAAAAIAAAASAP3/AgAAAAIAAAASAP7/AgAAAAIAAAASAP//AgAAAAIAAAASAAAAAgAAAAIAAAASAAEAAgAAAAIAAAASAAIAAgAAAAIAAAASAAMAAgAAAAIAAAASAAQAAgAAAAIAAAASAAUAAgAAAAIAAAASAAYAAgAAAAIAAAASAAcAAgAAAAIAAAASAAgAAgAAAAIAAAASAAkAAgAAAAIAAAASAAoAAgAAAAIAAAASAAsAAgAAAAIAAAASAAwAAgAAAAIAAAASAA0AAgAAAAIAAAASAA4AAgAAAAIAAAASAA8AAgAAAAIAAAATAPL/AgAAAAIAAAATAPP/AgAAAAIAAAATAPT/AgAAAAIAAAATAPX/AgAAAAIAAAATAPb/AgAAAAIAAAATAPf/AgAAAAIAAAATAPj/AgAAAAIAAAATAPn/AgAAAAIAAAATAPr/AgAAAAIAAAATAPv/AgAAAAIAAAATAPz/AgAAAAIAAAATAP3/AgAAAAIAAAATAP7/AgAAAAIAAAATAP//AgAAAAIAAAATAAAAAgAAAAIAAAATAAEAAgAAAAIAAAATAAIAAgAAAAIAAAATAAMAAgAAAAIAAAATAAQAAgAAAAIAAAATAAUAAgAAAAIAAAATAAYAAgAAAAIAAAATAAcAAgAAAAIAAAATAAgAAgAAAAIAAAATAAkAAgAAAAIAAAATAAoAAgAAAAIAAAATAAsAAgAAAAIAAAATAAwAAgAAAAIAAAATAA0AAgAAAAIAAAATAA4AAgAAAAIAAAATAA8AAgAAAAIAAAAUAPL/AgAAAAIAAAAUAPP/AgAAAAIAAAAUAPT/AgAAAAIAAAAUAPX/AgAAAAIAAAAUAPb/AgAAAAIAAAAUAPf/AgAAAAIAAAAUAPj/AgAAAAIAAAAUAPn/AgAAAAIAAAAUAPr/AgAAAAIAAAAUAPv/AgAAAAIAAAAUAPz/AgAAAAIAAAAUAP3/AgAAAAIAAAAUAP7/AgAAAAIAAAAUAP//AgAAAAIAAAAUAAAAAgAAAAIAAAAUAAEAAgAAAAIAAAAUAAIAAgAAAAIAAAAUAAMAAgAAAAIAAAAUAAQAAgAAAAIAAAAUAAUAAgAAAAIAAAAUAAYAAgAAAAIAAAAUAAcAAgAAAAIAAAAUAAgAAgAAAAIAAAAUAAkAAgAAAAIAAAAUAAoAAgAAAAIAAAAUAAsAAgAAAAIAAAAUAAwAAgAAAAIAAAAUAA0AAgAAAAIAAAAUAA4AAgAAAAIAAAAUAA8AAgAAAAIAAAAVAPL/AgAAAAIAAAAVAPP/AgAAAAIAAAAVAPT/AgAAAAIAAAAVAPX/AgAAAAIAAAAVAPb/AgAAAAIAAAAVAPf/AgAAAAIAAAAVAPj/AgAAAAIAAAAVAPn/AgAAAAIAAAAVAPr/AgAAAAIAAAAVAPv/AgAAAAIAAAAVAPz/AgAAAAIAAAAVAP3/AgAAAAIAAAAVAP7/AgAAAAIAAAAVAP//AgAAAAIAAAAVAAAAAgAAAAIAAAAVAAEAAgAAAAIAAAAVAAIAAgAAAAIAAAAVAAMAAgAAAAIAAAAVAAQAAgAAAAIAAAAVAAUAAgAAAAIAAAAVAAYAAgAAAAIAAAAVAAcAAgAAAAIAAAAVAAgAAgAAAAIAAAAVAAkAAgAAAAIAAAAVAAoAAgAAAAIAAAAVAAsAAgAAAAIAAAAVAAwAAgAAAAIAAAAVAA0AAgAAAAIAAAAVAA4AAgAAAAIAAAAVAA8AAgAAAAIAAAA=")
tile_set = SubResource("TileSet_ukeqh")

[node name="UI" parent="." instance=ExtResource("4_lqoa8")]

[node name="PlayerController" type="Node" parent="."]
script = ExtResource("5_17rar")

[node name="PlayerCamera" parent="." instance=ExtResource("6_1ikdd")]

[node name="ObjectiveManager" parent="." instance=ExtResource("7_dytgf")]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_udcny")
autoplay = true
parameters/looping = true

[node name="SFXManager" type="AudioStreamPlayer" parent="."]
bus = &"SFX"
script = ExtResource("9_ujoul")
block_place = ExtResource("10_lh4gb")

[connection signal="updated_rooms" from="." to="ObjectiveManager" method="handle_room_updated"]
[connection signal="block_placed" from="PlacementLayer" to="SFXManager" method="handle_block_placed"]
[connection signal="cell_layout_changed" from="PlacementLayer" to="." method="handle_cell_layout_change"]
[connection signal="objectives_updated" from="ObjectiveManager" to="UI" method="handle_objectives_updated"]
